[package]
name = "poly-commit"
version = "0.1.1-alpha.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "William Lin",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
repository = "https://github.com/scipr-lab/poly-commit"
documentation = "https://docs.rs/poly-commit/"
keywords = ["cryptography", "polynomial commitments", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra-core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false }
ff-fft = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false }
bench-utils = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0" }
rand_core = { version = "0.5", default-features = false }
digest = "0.8"
rayon = { version = "1", optional = true }
derivative = { version = "2", features = [ "use_core" ] }

[dev-dependencies]
rand = { version = "0.7", default-features = false }
algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
blake2 = { version = "0.8", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = ["std", "parallel"]
std = [ "algebra-core/std", "ff-fft/std", ]
print-trace = [ "bench-utils/print-trace" ]
parallel = [ "std", "algebra-core/parallel", "ff-fft/parallel", "rayon" ]

[patch.'https://github.com/scipr-lab/zexe']
zexe_algebra_core = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "algebra-core", default-features = false, features = ["derive"] }
zexe_algebra = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "algebra", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_fft = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "ff-fft", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_bench_utils = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "bench-utils", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_core = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "r1cs-core", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_std = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "r1cs-std", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_groth16 = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "groth16", default-features = false, features = [] }

